# PDI

./: CMakeLists.txt
cannylhismo/: CMakeLists.txt  cannylhismo.cpp
contar_bolhas/: CMakeLists.txt  main.cpp
dftfilter/: CMakeLists.txt  dftfilter.cpp
dftimage/: CMakeLists.txt  dftimage.cpp
histogram_manip/: CMakeLists.txt  histogram_manip.cpp
kmeans/: CMakeLists.txt  kmeans.cpp
morfologia/: CMakeLists.txt  morfologia.cpp
regions/: CMakeLists.txt  regions.cpp
senoide/: .gitignore  CMakeLists.txt  senoide.cpp
steganography/: CMakeLists.txt  main.cpp  steganography.cpp
trocaregioes/: CMakeLists.txt  trocaregioes.cpp
